[build-system]
requires = [ "poetry-core",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "bengrn"
version = "1.0.7"
license = "MIT"
description = "benchmarking gene regulatory networks"
authors = [ "jeremie kalfon"]
readme = "README.md"
repository = "https://github.com/jkobject/benGRN"
keywords = [ "scRNAseq", "GRN", "gene regulatory networks", "benchmark", "comp bio", "scPRINT",]

[tool.poetry.dependencies]
python = "3.10.*"
anndata = "*"
scipy = "*"
scikit-learn = "*"
numpy = "*"
arboreto = "*"
pyscenic = "*"
ctxcore = "*"
seaborn = "*"
decoupler = "*"
pandas = ">=2.0.0"
grnndata = "*"
omnipath = "*"
dask-expr = "*"
pytorch-fast-transformers = { version = "*", optional = true }
pytest = { version = "^7.4.3", optional = true }
coverage = { version = "^7.3.2", optional = true }
flake8 = { version = "^6.1.0", optional = true }
black = { version = "^23.10.1", optional = true }
isort = { version = "^5.12.0", optional = true }
pytest-cov = { version = "^4.1.0", optional = true }
mypy = { version = "^1.6.1", optional = true }
gitchangelog = { version = "^3.0.4", optional = true }
mkdocs = { version = "^1.5.3", optional = true }

[tool.poetry.extras]
dev = [
  "pytest",
  "coverage",
  "flake8",
  "black",
  "toml",
  "isort",
  "pytest-cov",
  "mypy",
  "gitchangelog",
  "mkdocs",
  "mkdocs-git-revision-date-localized-plugin",
  "mkdocstrings",
  "mkdocs-git-authors-plugin",
  "mkdocs-jupyter",
  "mkdocstrings-python",
]