[build-system]
requires = [ "poetry-core",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "bengrn"
version = "1.1.0"
license = "MIT"
description = "benchmarking gene regulatory networks"
authors = [ "jeremie kalfon"]
readme = "README.md"
repository = "https://github.com/jkobject/benGRN"
keywords = [ "scRNAseq", "GRN", "gene regulatory networks", "benchmark", "comp bio", "scPRINT",]

[project]
name = "benGRN"
version = "1.1.0"
description = "benchmarking gene regulatory networks"
authors = [ "jeremie kalfon"]
readme = [ "README.md", "LICENSE",]
license = "MIT"
repository = "https://github.com/jkobject/benGRN"
keywords = [ "scRNAseq", "GRN", "gene regulatory networks", "benchmark", "comp bio", "scPRINT",]
requires-python = ">=3.10"

[tool.ruff]
# Set the maximum line length to 88.
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501", "E203", "E266", "E265", "F401", "F403"]

[tool.poetry.dependencies]
python = "3.10.*"
anndata = "*"
scipy = "*"
scikit-learn = "*"
numpy = "*"
arboreto = "*"
pyscenic = "*"
ctxcore = "*"
seaborn = "*"
decoupler = "*"
pandas = ">=2.0.0"
grnndata = "*"
omnipath = "*"
dask-expr = "*"
pytest = { version = "^7.4.3", optional = true }
coverage = { version = "^7.3.2", optional = true }
ruff = { version = "^0.6.4", optional = true }
pytest-cov = { version = "^4.1.0", optional = true }
gitchangelog = { version = "^3.0.4", optional = true }
mkdocs = { version = "^1.5.3", optional = true }

[tool.poetry.extras]
dev = [
    "pytest",
    "coverage",
    "ruff",
    "pytest-cov",
    "gitchangelog",
    "mkdocs",
    "mkdocs-git-revision-date-localized-plugin",
    "mkdocstrings",
    "mkdocs-git-authors-plugin",
    "mkdocs-jupyter",
    "mkdocstrings-python"
]