[project]
name = "benGRN"
version = "1.3.0"
description = "benchmarking gene regulatory networks"
authors = [
    {name = "jeremie kalfon", email = "jkobject@gmail.com"}
]
readme = "README.md"
license = {text = "MIT"}
keywords = ["scRNAseq", "GRN", "gene regulatory networks", "benchmark", "comp bio", "scPRINT"]
requires-python = ">=3.10"
dependencies = [
    "anndata>=0.8.0",
    "scipy>=1.7.0",
    "scikit-learn>=1.0.0",
    "numpy>=1.21.0",
    "arboreto>=0.1.6",
    "pyscenic>=0.12.0",
    "ctxcore>=0.1.1",
    "seaborn>=0.11.0",
    "decoupler>=1.2.0",
    "pandas>=2.0.0",
    "grnndata>=1.1.4",
    "omnipath>=1.0.0",
    "dask-expr>=1.0.0",
    "gseapy>=0.10.0",
    "bionty>=0.49.0",
    "rich>=13.5.0",
    "gdown>=4.7.1",
    "setuptools>=58.0.0",
    "numba>=0.56.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "coverage>=7.3.2",
    "ruff>=0.6.4",
    "pytest-cov>=4.1.0",
    "gitchangelog>=3.0.4",
    "mkdocs>=1.5.3",
    "mkdocs-git-revision-date-localized-plugin>=1.0.0",
    "mkdocstrings>=0.22.0",
    "mkdocs-git-authors-plugin>=0.4.0",
    "mkdocs-jupyter>=0.2.0",
    "mkdocstrings-python>=0.10.0"
]

[project.urls]
repository = "https://github.com/jkobject/benGRN"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501", "E203", "E266", "E265", "F401", "F403"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = [
    "bengrn/",
    "data/",
]